@@ -1,7 +1,12 @@
 2009-07-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	*
-	chrome/content/sogo-connector/general/preference.service.addressbook.groupdav.js:
+	chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
+	it may happen that we are returned a card we already have "as new"
+	and with a different version number than the one we have. In and
+	only in that case, we update the card/list so that we don't lose
+	updates.
+	* chrome/content/sogo-connector/general/preference.service.addressbook.groupdav.js:
 	removed obsolete preferences
 
 	* js/CalDAVAclManager.js: we become a bit more foolprop when an
